header almost done

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -120,7 +120,7 @@
       background-color: var(--main-blue);
       border-radius: 2px;
       position: relative;
-      top: 31px;
+      top: 29px;
     }
   }
 
@@ -152,19 +152,13 @@
       background-color: var(--main-blue);
       border-radius: 2px;
       position: relative;
-      top: 31px;
+      top: 29px;
     }
   }
 
   &:hover,
   &:focus {
     color: var(--main-blue);
-  }
-}
-
-@media (min-width: 1200px) {
-  .header__links-portfolio {
-    font-size: 14px;
   }
 }
 
@@ -186,15 +180,8 @@
   }
 }
 
-@media (min-width: 1200px) {
-  .header__links-contact {
-    font-size: 14px;
-  }
-}
-
 .header__contact {
   display: none;
- 
 }
 
 @media (min-width: 768px) {
@@ -223,7 +210,6 @@
   text-decoration: none;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
   color: var(--main-silver);
@@ -239,15 +225,7 @@
 
 @media (min-width: 1200px) {
   .header__contact-element {
-    fill: var(--main-silver);
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 500;
-
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: var(--main-silver);
-    display: flex;
+    font-size: 14px;
     align-items: center;
 
     &:hover,
@@ -269,8 +247,8 @@
   }
 }
 
-@media (min-width: 1200px) {
-  .header__contact-icon {
-    margin-right: 8px;
-  }
-}
+// @media (min-width: 1200px) {
+//   .header__contact-icon {
+//     margin-right: 8px;
+//   }
+// }
