work in progress

--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -4,4 +4,15 @@
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
+    
+  }
+
+  .purchase__container {
+    box-sizing: border-box;
+    max-width: 1200px;
+    width: 100%;
+    height: 164px;
+    margin: 0 auto;
+    padding: 0 15px;
+    
   }
