--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -1,18 +1,22 @@
 .container {
-    box-sizing: border-box;
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 15px;
-    
-  }
+  box-sizing: border-box;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 
+.purchase__container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  width: 100%;
+  height: 164px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+@media (min-width: 1200px) {
   .purchase__container {
-    box-sizing: border-box;
-    max-width: 1200px;
-    width: 100%;
-    height: 164px;
-    margin: 0 auto;
-    padding: 0 15px;
-    
+    height: 200px;
   }
+}
