--- a/sass/components/_purchase.scss
+++ b/sass/components/_purchase.scss
@@ -54,6 +54,7 @@
 
 @media (min-width: 1200px) {
   .purchase__header {
+    margin-top: 20px;
     width: 696px;
     height: 120px;
     justify-content: center;
@@ -82,7 +83,7 @@
   margin-left: 40px;
   box-sizing: border-box;
   padding-left: 42px;
-  width: 448px;
+  width: 370px;
   height: 40px;
   outline: 0;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -93,6 +94,26 @@
 
   &:focus-within {
     border: 1px solid var(--main-blue);
+  }
+}
+
+@media (min-width: 1200px) {
+  .purchase__modal-input {
+    margin-left: 40px;
+    box-sizing: border-box;
+    padding-left: 42px;
+    width: 448px;
+    height: 40px;
+    outline: 0;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    font-size: 12px;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus-within {
+      border: 1px solid var(--main-blue);
+    }
   }
 }
 
@@ -132,14 +153,24 @@
   box-sizing: border-box;
   position: relative;
   margin-left: 40px;
-  width: 448px;
+  width: 370px;
   height: 120px;
+}
+
+@media (min-width: 1200px) {
+  .purchase__modal-comment {
+    box-sizing: border-box;
+    position: relative;
+    margin-left: 40px;
+    width: 448px;
+    height: 120px;
+  }
 }
 
 .purchase__modal-comment-input {
   box-sizing: border-box;
   resize: none;
-  width: 448px;
+  width: 370px;
   height: 100%;
   padding-left: 16px;
   padding-top: 12px;
@@ -159,17 +190,57 @@
   }
 }
 
+@media (min-width: 1200px) {
+  .purchase__modal-comment-input {
+    box-sizing: border-box;
+    resize: none;
+    width: 448px;
+    height: 100%;
+    padding-left: 16px;
+    padding-top: 12px;
+    outline: 0;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus-within {
+      border-color: var(--main-blue);
+      border: 1px solid var(--main-blue);
+    }
+  }
+}
+
 .purchase__modal-statement {
   position: relative;
-  width: 528px;
+  width: 450px;
   height: 74px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: var(--main-silver);
+}
+
+@media (min-width: 1200px) {
+  .purchase__modal-statement {
+    position: relative;
+    width: 528px;
+    height: 74px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: var(--main-silver);
+  }
 }
 
 .purchase__modal-checkbox {
@@ -178,7 +249,7 @@
   height: 15px;
   position: absolute;
   top: 25px;
-  left: 55px;
+  left: 40px;
 
   &:checked + span {
     fill: var(--main-white);
@@ -189,11 +260,30 @@
   }
 }
 
+@media (min-width: 1200px) {
+  .purchase__modal-checkbox {
+    opacity: 0;
+    width: 16px;
+    height: 15px;
+    position: absolute;
+    top: 25px;
+    left: 55px;
+
+    &:checked + span {
+      fill: var(--main-white);
+      background-color: var(--main-blue);
+      border: 1px solid var(--main-blue);
+      border-radius: 2px;
+      outline: var(--main-blue);
+    }
+  }
+}
+
 .purchase__modal-checkbox-border {
   box-sizing: border-box;
   position: absolute;
   top: 25px;
-  left: 55px;
+  left: 40px;
   width: 16px;
   height: 15px;
   border: 1px solid var(--black-main);
@@ -207,10 +297,38 @@
   fill: var(--main-white);
 }
 
+@media (min-width: 1200px) {
+  .purchase__modal-checkbox-border {
+    box-sizing: border-box;
+    position: absolute;
+    top: 25px;
+    left: 55px;
+    width: 16px;
+    height: 15px;
+    border: 1px solid var(--black-main);
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    fill: var(--main-white);
+  }
+}
+
 .purchase__modal-statement-text {
   position: absolute;
   top: 20px;
-  left: 79px;
+  left: 64px;
+}
+
+@media (min-width: 1200px) {
+  .purchase__modal-statement-text {
+    position: absolute;
+    top: 20px;
+    left: 79px;
+  }
 }
 
 .purchase__modal-statement-text-silver {
