--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,10 +14,10 @@
     top: 112px;
     height: 581px;
     width: 528px;
-    background-color: var(--main-white);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    // background-color: var(--main-white);
+    // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    //   0px 2px 1px rgba(0, 0, 0, 0.2);
+    // border-radius: 4px;
   }
 }
 
@@ -38,15 +38,16 @@
 
 @media (min-width: 1200px) {
   .purchase__modal-header {
-    margin-top: 40px;
-    margin-bottom: 30px;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--black-main);
+    width: 448px;
+    // margin-top: 40px;
+    // margin-bottom: 30px;
+    // font-family: "Roboto";
+    // font-style: normal;
+    // font-weight: 700;
+    // font-size: 20px;
+    // line-height: 23px;
+    // text-align: center;
+    // letter-spacing: 0.03em;
+    // color: var(--black-main);
   }
 }
