work in progress

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,8 +10,8 @@
 
 @media (min-width: 1200px) {
   .purchase__modal {
-    position: relative;
-    top: 112px;
+    // position: relative;
+    // top: 112px;
     height: 581px;
     width: 528px;
     // background-color: var(--main-white);
