--- a/sass/utils/_section.scss
+++ b/sass/utils/_section.scss
@@ -1,6 +1,24 @@
 .section {
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .section {
+    display: flex;
+    width: 100%;
+    align-items: center;
+  }
+}
+
+@media (min-width: 1200px) {
+  .section {
     padding: 94px 0;
     display: flex;
     width: 100%;
     align-items: center;
   }
+}
