--- a/sass/components/_activities.scss
+++ b/sass/components/_activities.scss
@@ -1,3 +1,21 @@
+.activities {
+  display:none;
+}
+
+@media (min-width: 768px) {
+  .activities {
+    display: flex;
+  }
+}
+
+@media (min-width: 1200px) {
+  .activities {
+    display: flex;
+  }
+}
+
+
+
 .activities__header {
   display: flex;
   justify-content: center;
