work in progress

--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -16,7 +16,10 @@
 
 .team__list {
   list-style-type: none;
+  align-content: center;
+  background-size: cover;
 }
+
 
 @media (min-width: 768px) {
   .team__list {
