--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,45 +1,51 @@
 .customers {
-    margin-top: 94px;
-    margin-bottom: 94px;
-    height: 184px;
-    display: none;
-  }
-  
+  // margin-top: 94px;
+  // margin-bottom: 94px;
+  // height: 184px;
+  // display: none;
+}
+
+.customers__header {
+  font-style: normal;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding-bottom: 30px;
+}
+
+@media (min-width: 1200px) {
   .customers__header {
-    font-style: normal;
-      font-size: 36px;
-      line-height: 42px;
-      text-align: center;
-      letter-spacing: 0.03em;
-      padding-bottom: 50px;
+    padding-bottom: 50px;
   }
-  
-  .customers__list {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .customers li {
-    list-style: none;
-    width: 170px;
-    height: 92px;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .customers__list-item {
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    fill: var(--icon-grey);
-  }
-  
-  .customers__list-item:hover,
-  .customers__list-item:focus {
-    border: 1px solid var(--main-blue);
-    fill: var(--main-blue);
-  }
+}
+
+.customers__list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.customers li {
+  list-style: none;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.customers__list-item {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--icon-grey);
+}
+
+.customers__list-item:hover,
+.customers__list-item:focus {
+  border: 1px solid var(--main-blue);
+  fill: var(--main-blue);
+}
