--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,11 +1,15 @@
 .team {
   background: var(--second-white);
   padding-top: 60px;
+  padding-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 @media (min-width: 1200px) {
   .team {
     padding-top: 94px;
+    padding-bottom: 94px;
+    margin-bottom: 94px;
   }
 }
 
@@ -26,7 +30,7 @@
 
 .team__list {
   list-style-type: none;
-  }
+}
 
 @media (min-width: 768px) {
   .team__list {
